# sales-retention-analytics-warehouse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: streamlit_app.py
data/: orders.csv
data/raw/: customers.csv  marketing_spend.csv  orders.csv  payments.csv  products.csv  refunds.csv
sql/marts/: mart_cohort_retention.sql  mart_customer_ltv.sql  mart_daily_revenue.sql  mart_marketing_roi.sql  mart_rfm_segments.sql
sql/staging/: stg_customers.sql  stg_orders.sql
src/sales_retention_analytics_warehouse/: cleaning.py  config.py  core.py  forecasting.py  loaders.py  logging_config.py  marts.py  metrics.py  recommendations.py
src/sales_retention_analytics_warehouse/api/: main.py
tests/: test_api.py  test_cleaning.py  test_core.py  test_marts_metrics.py
