[project]
name = "sales-retention-analytics-warehouse"
version = "0.1.0"
description = "End-to-end sales analytics warehouse with cohort analysis, LTV, RFM and dashboard."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "pydantic-settings>=2.4.0",
    "openpyxl>=3.1.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sales_retention_analytics_warehouse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
